--- a/app/pug/includes/_footer.pug
+++ b/app/pug/includes/_footer.pug
@@ -1,2 +1,53 @@
 footer.footer
+    .container
+        .row
+            .col-xl
+            .col-xl-6
+                h2.caption.caption_color_wh.caption_size_lb.mb-2 Norm's Marina
+                p.main__text.main__text_color_wh 1347 Brattleboro Road, Hinsdale,<br> New Hampshire 03451, United States
+                a(href="tel:6032566266").caption.caption_color_wh.caption_size_lb 603 256 6266
+                p.main__text.main__text_color_wh Call from 10am till 8pm
+            .col-xl-4
+                h2.caption.caption_color_wh.caption_size_lb.mb-2 Working Hours
+                table.table.table-borderless.main__text_color_wh
+                    tr
+                        td.py-0.pl-0.pr-5 Monday
+                        td.py-0.pl-5 08:00am – 06:00pm
+                    tr
+                        td.p-0 Tuesday
+                        td.py-0.pl-5 09:00am – 05:00pm
+                    tr
+                        td.p-0 Wednesday
+                        td.py-0.pl-5 09:00am – 05:00pm
+                    tr
+                        td.p-0 Thursday
+                        td.py-0.pl-5 09:00am – 05:00pm
+                    tr
+                        td.p-0 Friday
+                        td.py-0.pl-5 09:00am – 05:00pm
+                    tr
+                        td.p-0 Saturday
+                        td.py-0.pl-5 Closed
+                    tr
+                        td.p-0 Sunday
+                        td.py-0.pl-5 Closed
+            .col-xl
+        .row.mt-3
+            .col-xl
+            .col-xl-6.d-flex.align-items-center
+                a(href="#").button.button_back_wh.button_radius_rl.button_color_bl.button_font_md.button_padding_bg.button_style_wh.d-inline-block See Us On The Map
+            .col-xl-4
+                p.main__text.main__text_color_wh.main__text_style_bl.m-0 Monday - Sunday:
+                p.main__text.main__text_color_wh Boat Launching - Dawn to dusk <br> Gas - 8am - 6pm
+            .col-xl
+    .footer__bottom
+        .container  
+            .row
+                .col-xl
+                .col-xl-5
+                    p.main__text.main__text_color_wh Copyright &copy; 2019 Norms Marina - All Rights Reserved
+                .col-xl-5
+                    p.main__text.main__text_color_wh Site Development &amp; Support — Admiral Software
+                .col-xl
+            
     
