--- a/app/pug/includes/_main.pug
+++ b/app/pug/includes/_main.pug
@@ -8,7 +8,7 @@ main.main
                     a(href="#").arrowBtn.arrowBtn_prev
                 .col-xl-10
                     h1.caption.caption_size_xl.caption_color_wh.text-center Kayaks &amp; Canoes Rentals
-                    h2.caption.caption_color_wh.text-center Norm's Marina — Full Service Marina in Hinsdale
+                    h2.caption.caption_color_wh.text-center.caption_size_lg Norm's Marina — Full Service Marina in Hinsdale
                 .col.d-flex.align-items-center
                     a(href="#").arrowBtn.arrowBtn_next
     .main__mScreen_back
@@ -35,3 +35,115 @@ main.main
                         h2.caption.caption_size_md.caption_padding_xl Rent A Kayak <span class="caption_color_bl"> Or A Canoe</span>
                         p.main__description.main__description_color_gr.pt-1 Miles and miles of the best kayaks and canoes on Connecticut river. <br> Come for a  day, week, month or the whole season, flexible availability and deals.
                     .col-md
+                .row.mt-4
+                    .col-xl-6
+                        .kayakCard
+                            h3.caption.caption_size_sm.text-center.m-0 Single <span class="caption_color_or">Kayak</span>
+                            p.main__description.main__description_size_sm.main__description_style_uc.text-center.m-0 DOUBLE KAYAK + $15
+                            .kayakCard__wrap
+                                .container
+                                    .row.pt-3
+                                        .col-3.p-0
+                                            .kayakCard__left
+                                                img(src="img/kayak.png").img-fluid
+                                        .col-9
+                                            .kayakCard__right
+                                                table.table
+                                                    tr
+                                                        td.main__text.main__text_size_md.main__text_style_bl.border-none_tp 1 Hour
+                                                        td.main__text.main__text_size_md.main__text_style_bl.text-right.border-none_tp $25
+                                                    tr
+                                                        td.main__text.main__text_size_md.main__text_style_bl 2 Hours
+                                                        td.main__text.main__text_size_md.main__text_style_bl.text-right $35
+                                                    tr
+                                                        td.main__text.main__text_size_md.main__text_style_bl Half Day
+                                                        td.main__text.main__text_size_md.main__text_style_bl.text-right $50
+                                                    tr
+                                                        td.main__text.main__text_size_md.main__text_style_bl Full Day
+                                                        td.main__text.main__text_size_md.main__text_style_bl.text-right $55
+                                                a(href="#").button.button_back_bl.button_radius_rl.button_font_md.button_padding_bg.button_style_rl.button_margin_tp Book Now
+                                                p.main__text.text-center.mt-3.pt-1.mb-0 Or call us now <a href="tel:6032566266" class="main__text_color_bl"> 603 256 6266</a>
+                    .col-xl-6
+                        .kayakCard
+                            h3.caption.caption_size_sm.text-center.m-0 Single <span class="caption_color_or">Canoe</span>
+                            p.main__description.main__description_size_sm.main__description_style_uc.text-center.m-0 OR FAMILY CANOE
+                            .kayakCard__wrap
+                                .container
+                                    .row.pt-3
+                                        .col-3.p-0
+                                            .kayakCard__left
+                                                img(src="img/canoe.png").img-fluid
+                                        .col-9
+                                            .kayakCard__right
+                                                table.table
+                                                    tr
+                                                        td.main__text.main__text_size_md.main__text_style_bl.border-none_tp 1 Hour
+                                                        td.main__text.main__text_size_md.main__text_style_bl.text-right.border-none_tp $25
+                                                    tr
+                                                        td.main__text.main__text_size_md.main__text_style_bl 2 Hours
+                                                        td.main__text.main__text_size_md.main__text_style_bl.text-right $35
+                                                    tr
+                                                        td.main__text.main__text_size_md.main__text_style_bl Half Day
+                                                        td.main__text.main__text_size_md.main__text_style_bl.text-right $50
+                                                    tr
+                                                        td.main__text.main__text_size_md.main__text_style_bl Full Day
+                                                        td.main__text.main__text_size_md.main__text_style_bl.text-right $55
+                                                a(href="#").button.button_back_bl.button_radius_rl.button_font_md.button_padding_bg.button_style_rl.button_margin_tp Book Now
+                                                p.main__text.text-center.mt-3.pt-1.mb-0 Or call us now <a href="tel:6032566266" class="main__text_color_bl"> 603 256 6266</a>
+                .row
+                    .col-xl
+                    .col.col-xl-10.text-center
+                        p.main__text.main__text_style_uc.mt-4.pt-3 ALL RATES ARE BASED ON 1 HOUR, AS THIS IS THE GENERAL AMOUNT OF TIME IT TAKES TO ENJOY A NICE LEISURELY ROUND-TRIP PADDLE FROM NORM’S MARINA TO EITHER BOSTON-MAIN HISTORIC RAIL ROAD BRIDGE OR TO THE WEST RIVER AND MARINA’S RESTAURANT FOR A WONDERFUL LUNCH ON THE RIVER. AVAILABILITY IS BASED ON FIRST COME FIRST SERVE, RESERVATION IS NOT NECESSARY, HOWEVER, THERE MIGHT BE A WAITING LINE DURING OUR PEAK HOURS AT 10AM TO 2PM IN SEASON.
+                    .col-xl
+                .row.pb-5
+                    .col-12.col-xl-6
+                        .rentalCard
+                            h3.caption.caption_color_wh.caption_size_sm.text-center Rental Rules
+                            p.main__text.main__text_color_wh.text-center Please, get acquainted with the following list of simple rules to keep you and your family safe and sound while resting.
+                            a(href="#").button.button_back_wh.button_radius_rl.button_color_or.button_font_md.button_padding_bg.button_style_wh.button_position_tp Book Now
+                    .col-12.col-xl-6
+                        .rentalCard
+                            h3.caption.caption_color_wh.caption_size_sm.text-center Rental Release Agreement
+                            p.main__text.main__text_color_wh.text-center This document helps us to maintain our equipment in good condition to bring holidaymakers joy every time they visit us.
+                            a(href="#").button.button_back_wh.button_radius_rl.button_color_or.button_font_md.button_padding_bg.button_style_wh.button_position_tp Book Now
+    .about
+        .about__wrap
+            .about__content.container.p-0
+                .row
+                    .col-md
+                    .col-md-10.text-center
+                        h2.caption.caption_size_md.caption_padding_xl.caption_color_wh About Norm's Marina
+                        p.main__text.main__text_color_wh.main__text_size_md.pt-1 80 boat slips, land storage, mechanic and repairs, onsite gas tank,<br> 10 professional fishing tournaments held every year, kayaks and canoes rentals.
+                    .col-md
+                .row.no-gutters
+                    .col
+                        #aboutSlider.aboutCard-wrap.d-flex.owl-carousel.owl-theme
+                            .aboutCard.text-center
+                                .roundIcon.roundIcon_first
+                                h3.caption.caption_size_sm.text-center.m-0 Boat <span class="caption_color_or">Slips</span>
+                                p.main__text.pt-2 Come and enjoy Connecticut river, puddle miles of open and calm waters. Stop by in Brattleboro for lunch or snacks. Own the river at Norm's Marina. Miles and miles of the best boating on Connecticut river. Come for a day, week, month or the whole season, flexible availability and deals.
+                            .aboutCard.text-center
+                                .roundIcon.roundIcon_first
+                                h3.caption.caption_size_sm.text-center.m-0 Land <span class="caption_color_or">Storage</span> 
+                                p.main__text.pt-2 Come and enjoy Connecticut river, puddle miles of open and calm waters. Stop by in Brattleboro for lunch or snacks. Own the river at Norm's Marina. Miles and miles of the best boating on Connecticut river. Come for a day, week, month or the whole season, flexible availability and deals.
+                            .aboutCard.text-center
+                                .roundIcon.roundIcon_first
+                                h3.caption.caption_size_sm.text-center.m-0 Mechanic <span class="caption_color_or"> &amp; Repairs</span>
+                                p.main__text.pt-2 Come and enjoy Connecticut river, puddle miles of open and calm waters. Stop by in Brattleboro for lunch or snacks. Own the river at Norm's Marina. Miles and miles of the best boating on Connecticut river. Come for a day, week, month or the whole season, flexible availability and deals.
+                            .aboutCard.text-center
+                                .roundIcon.roundIcon_first
+                                h3.caption.caption_size_sm.text-center.m-0 Onsite <span class="caption_color_or">Gas Tank</span>
+                                p.main__text.pt-2 Come and enjoy Connecticut river, puddle miles of open and calm waters. Stop by in Brattleboro for lunch or snacks. Own the river at Norm's Marina. Miles and miles of the best boating on Connecticut river. Come for a day, week, month or the whole season, flexible availability and deals.
+                .row
+                    .col.d-flex.justify-content-center.mt-4.mb-4
+                        a(href="#").about-left.button.button_back_wh.button_radius_lr.button_color_or.button_font_md.button_padding_bg.button_arrow.button_arrow_prev.m-3
+                        a(href="#").about-right.button.button_back_wh.button_radius_rl.button_color_or.button_font_md.button_padding_bg.button_arrow.button_arrow_next.m-3
+    .contact.d-flex.align-items-center
+        .contact__content.container
+            .row
+                .col-xl
+                .col.col-xl-6.text-center
+                    h2.caption.caption_size_xl.caption_color_wh.text-center.contact__caption Contact Us
+                    p.contact__text.caption.caption_color_wh.text-center.caption_size_lg.pb-4.px-2 Better yet, see us in person! <br> We love our customers, so feel free to visit during normal business hours.
+                    a(href="#").button.button_back_wh.button_radius_rl.button_color_or.button_font_md.button_padding_bg.button_style_wh.d-inline-block Contacts Us
+                .col-xl
