--- a/app/sass/import/_main.scss
+++ b/app/sass/import/_main.scss
@@ -1,4 +1,12 @@
 .main {
+   &_margin{
+      &_top{
+         margin-top: 40px;
+      }
+      &_bot{
+         margin-bottom:40px;
+      }
+   }
    &__mScreen{
       position: relative;
       width: 100%;
@@ -39,14 +47,43 @@
    }
    &__text{
       &_color{
+         &_wh{
+            color: $basicWhite;
+         }
          &_or{
             color: $basicOrange;
+         }
+         &_bl{
+            color: $basicBlue;
+         }
+      }
+      &_size{
+         &_md{
+            font-size: (20rem / 16);
+         }
+      }
+      &_style{
+         &_bl{
+            font-weight: 600;
+         }
+         &_uc{
+            text-transform: uppercase;
          }
       }
    }
    &__description{
       color: $basicGrey;
       font-size: (20rem / 16);
+      &_size{
+         &_sm{
+            font-size: (16rem / 16);
+         }
+      }
+      &_style{
+         &_uc{
+            text-transform: uppercase;
+         }
+      }
    }
 }
 .caption{
@@ -60,11 +97,22 @@
       &_bk{
          color: $basicBlack;
       }
+      &_or{
+         color: $basicOrange;
+      }
    }
    &_size{
+      &_sm{
+         font-size: (20rem / 16);    
+         font-weight: 800;  
+      }
+      &_lb{
+         font-size: (24rem / 16);
+         font-weight: 600;
+      }
       &_md{
          font-size: (28rem / 16);
-         font-weight: 700;
+         font-weight: 800;
       }
       &_lg{
          font-size: (28rem / 16);
@@ -72,7 +120,7 @@
       }
       &_xl{
          font-size: (56rem / 16);
-         font-weight: 700;
+         font-weight: 800;
          text-shadow: 0px 3px 6px rgba(0,0,0,.5);
       }
    }
@@ -89,6 +137,10 @@
    height: 60px;
    border:3px solid $basicWhite;
    border-radius: 100%;
+   transition: opacity  .5s;
+   &:hover{
+      opacity: .7;
+   }
    &_next{
       &::after{
          content: "";
@@ -116,15 +168,38 @@
          font-size: (20rem / 16);
          text-shadow: 0px 1px 2px rgba(0,0,0,.5);
       }
+      &_md{
+         font-size: (20rem / 16);
+         font-weight: 800;
+      }
+   }
+   &_color{
+      &_or{
+         color: $basicOrange;
+      }
+      &_bl{
+         color:#185A73;
+      }
    }
    &_back{
       &_bl{
          background: linear-gradient(180deg, rgba(49, 182, 232, 1), rgba(16, 118, 157, 1) 100%);
       }
+      &_wh{
+         background: $basicWhite;
+      }
    }
    &_padding{
       &_xl{
          padding: 20px 41px 16px;
+      }
+      &_bg{
+         padding: 11px 30px;
+      }
+   }
+   &_margin{
+      &_tp{
+         margin-top: 40px !important;
       }
    }
    &_radius{
@@ -135,6 +210,51 @@
             color: rgba(255,255,255,.8);
          }
       }
+      &_rl{
+         border-radius: 50px 4px 50px 4px;
+      }
+      &_lr{
+         border-radius: 4px 50px 4px 50px;
+      }
+   }
+   &_style{
+      &_rl{
+         text-align: center;
+         display: block;
+         max-width: 313px;
+         margin: 0 auto;
+         box-shadow: 0px 3px 6px 0px rgba(0,0,0,.25);
+      }
+      &_wh{
+         text-align: center;
+         max-width: 313px;
+         width: 100%;
+         box-shadow: 0px 3px 6px 0px rgba(0,0,0,.25);
+      }
+   }
+   &_position{
+      &_tp{
+         position: absolute;
+         bottom:0;
+         left: 50%;
+         transform: translateX(-50%) translateY(50%);
+         transition: .6s;
+      }
+   }
+   &_arrow{
+      display: block;
+      width: 100px;
+      height: 60px;
+      transition: opacity  .5s;
+      &_prev{
+         @include backImg('/img/arrow-left-orange.svg',initial,center);
+      }
+      &_next{
+         @include backImg('/img/arrow-right-orange.svg',initial,center);
+      }
+      &:hover{
+         opacity: .8;
+      }
    }
 }
 .icon{
@@ -143,5 +263,137 @@
          width: 24px;
          height: 24px;
       }
+   }
+}
+.kayakCard{
+   padding-top: 35px;
+   &__wrap{
+      position: relative;
+      padding: 40px;
+      border: 2px solid $basicOrange;
+      box-shadow: 0px 3px 6px 0px rgba(0,0,0,.16);
+      border-radius: 8px;
+      &::before{
+         content: "";
+         @extend %absolutePos;
+         left: 50%;
+         transform: translateX(-50%);
+         top:-81px;
+         display: block;
+         width: 294px;
+         height: 81px;
+         @include backImg('/img/wave-element-05.svg',contain,initial);
+      }
+   }
+}
+.border-none{
+   &_tp{
+      border-top: none !important;
+   }
+}
+.rentalCard{
+   position: relative;
+   background: linear-gradient(180deg, #FF663F, #BC3210 100%);
+   border-radius: 8px;
+   padding: 30px;
+   margin: 30px 0;
+   transition: .6s;
+   &:hover{
+      box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.45);
+   }
+   &:hover .button_position_tp{
+      transform:translateX(-50%) translateY(35%);
+   }
+}
+.about{
+   position: relative;
+   padding: 27px 0;
+   &::after{
+      content: "";
+      @extend %fullAbsolute;
+      display: block;
+      @include backImg('/img/bg-with-waves.png',100%,initial); 
+   }
+   &__wrap{
+      position: relative;
+      background: linear-gradient(180deg, rgba(49, 182, 232, 1), rgba(16, 118, 157, 1) 100%); 
+      &::before{
+         content:'';   
+         position: absolute;
+         top: -27px;
+         left: 0;
+         display: block;
+         width: 100%;
+         height: 27px;
+         @include backImg('/img/wave-02.svg',initial,initial);      
+         background-color: $basicWhite;
+      }
+      &::after{
+         content:'';   
+         position: absolute;
+         bottom: -27px;
+         left: 0;
+         display: block;
+         width: 100%;
+         height: 27px;
+         @include backImg('/img/wave-03.svg',initial,initial);  
+         background-color: rgba(0,0,0,.35);    
+      }
+   }
+   &__content{
+      position: relative;
+      z-index:1;
+   }
+}
+.aboutCard-wrap{
+   padding: 50px 0 0;
+}
+.aboutCard{
+   position: relative;
+   background: $basicWhite;
+   border-radius: 8px;
+   box-shadow: 0px 3px 6px 0px rgba(0,0,0,.16);
+   padding: 50px 20px 30px;
+   margin: 35px 15px 15px;
+}
+.roundIcon{
+   @extend %baseFlex;
+   @extend %flexFullCenter;
+   @extend %absolutePos;
+   top:-32px;
+   left:50%;
+   transform: translateX(-50%);
+   width: 64px;
+   height: 64px; 
+   background: linear-gradient(180deg, #FF663F, #BC3210 100%); 
+   border: 2px solid $basicWhite;
+   border-radius: 100%;
+   &_first{
+      &::after{
+         content: "";
+         width: 22px;
+         height: 22px;
+         @include backImg('/img/paddle-white.svg',contain,initial);
+      }
+   }
+}
+.contact{
+   position: relative;
+   min-height: 567px;
+   &__content{
+      position: relative;
+      z-index: 1;
+   }
+   &__text{
+      line-height: 38px;
+   }
+   &__caption{
+      line-height: 0.9;
+   }
+   &::after{
+      content: "";
+      @extend %fullAbsolute;
+      display: block;
+      background:rgba(0,0,0,.35);
    }
 }
